Yet another attempt to fix message logi suddenly jumping several lines up.

--- a/package/bin/style.css
+++ b/package/bin/style.css
@@ -145,10 +145,6 @@ ul {
   position: relative;
 }
 
-#rooms-and-nicks:hover .room.server .content-item {
-  width: 130px;
-}
-
 #rooms-and-nicks .add-channel {
   position: absolute;
   right: 2px;
@@ -244,13 +240,6 @@ ul {
 
 #rooms-and-nicks .room .remove-button:hover {
   color: rgba(0, 0, 0, .5);
-}
-
-#rooms-and-nicks .room.selected:not(.footer):not(.always-empty) .content-item {
-  width: 123px;
-}
-#rooms-and-nicks .room:hover:not(.footer):not(.always-empty) .content-item {
-  width: 123px;
 }
 
 #rooms-and-nicks .room.selected:not(.footer):not(.always-empty) .remove-button {
